Compatibilidad con Java 9