@@ -89,7 +89,7 @@ public abstract class Sequence extends DecoderObject {
             System.arraycopy(rawValue, offset, remainingBytes, 0, remainingBytes.length);
             try {
             	tlv = new Tlv(remainingBytes);
-            	tmpDo = this.elementsTypes[i].getElementType().newInstance();
+            	tmpDo = this.elementsTypes[i].getElementType().getConstructor().newInstance();
             	tmpDo.checkTag(tlv.getTag());
                 tmpDo.setDerValue(tlv.getBytes());
             }
